--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Drones 101</title>
 		
 		<link rel="stylesheet" href="/uni.css" />
-		<link rel="stylesheet" href="/drones.css" />
+		<link rel="stylesheet" href="drones.css" />
 	</head>
 	<body>
 		<nav>
