--- a/Tech/index.html
+++ b/Tech/index.html
@@ -25,8 +25,8 @@
 		<!-- Preloader -->
 		<div id="preloader">
 		    <div id="status">
-				Patience...<br />This one's big
-				<progress id="status2" max="540" value="0"></progress>
+				<p>Patience...<br />This one's big</p>
+				<p><progress id="status2" max="540" value="0"></progress></p>
 			</div>
 			
 		</div>
@@ -115,26 +115,26 @@
 			//
 			//IMAGE PRELOADING CRAP
 			//
-			function LoadStuff(){
-				var images = new Array()
-				console.log("WARNING About to dump massive stuff to console");
-				var loadBar = document.getElementById("status2");
-				
-				var i = 0;
-				while(true) {
-					images[i] = new Image()
-					images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
-					console.log("Loaded " + i + " of 540 images");
-					loadBar.value = i;
-					if(i == 540){
-						document.getElementById("preloader").style.display = "none";
-						document.getElementsByTagName("BODY")[0].style.overflow = "visible";
-						return;
-					}
-					i++;
-				}
+			var images = new Array()
+			console.log("WARNING About to dump massive stuff to console");
+
+			for(i = 0; i <= 540; i++) {
+				images[i] = new Image()
+				images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
+				console.log("Loaded " + i + " of 540 images");
 			}
-			LoadStuff();
+			
+			var loadBar = document.getElementById("status2");
+			images[100].onload = function(){loadBar.value = 100;};
+			images[200].onload = function(){loadBar.value = 200;};
+			images[300].onload = function(){loadBar.value = 300;};
+			images[400].onload = function(){loadBar.value = 400;};
+			images[500].onload = function(){loadBar.value = 500;};
+			images[540].onload = function(){
+				loadBar.value = 540;
+				document.getElementById("preloader").style.display = "none";
+				document.getElementsByTagName("BODY")[0].style.overflow = "visible";
+			};
 			</script>
 	
 	</body>
