FIX: Preload Text

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -25,7 +25,8 @@
 		<!-- Preloader -->
 		<div id="preloader">
 		    <div id="status">
-				<p>Patience...<br />This one's big</p>
+				<p>Patience, please<br />This one's big</p>
+				<p>It'll be worth it. We promise.</p>
 				<p><progress id="status2" max="540" value="0"></progress></p>
 			</div>
 			
