--- a/Prob/index.html
+++ b/Prob/index.html
@@ -19,15 +19,20 @@
 		<h1>Concerns</h1>
 		
 		<section>
-			<h2>Annoyances</h2>
+			<h2><span>Annoyances</span></h2>
+			<p>Stop and listen closely. Do you hear that? That’s the sound of your computer fan, possibly refrigerator, traffic, people outside, music playing from down the hall, and a dog barking outside. Noise pollution is unwanted or harmful levels of noise (EPA). Noise pollution comes primarily from traffic and airports (Nunez). However, as drones become more and more prevalent in today’s society, they are contributing more and more to noise pollution. It’s aesthetically detrimental as well as being physically and psychologically harmful. Some direct results of noise pollution are elevated blood pressure, heart disease, and psychological trauma, and has been associated with hypertension, reading impairment, and anxiety (Nunez). Noise pollution is becoming such a problem that Title IV of the Clean Air Act is devoted to noise pollution, such as studying its effects and investigating serious problems that arise from noise pollution. While many think that this is a serious overreaction to a few flying machines, it should also be noted that the FAA projected over 1 million drones would be purchased during the 2015 holiday season (Murphy).</p>
 		</section>
 		
 		<section>
-			<h2>Privacy</h2>
+			<h2><span>Privacy</span></h2>
+			<p>Technology today is found almost everywhere. There are cameras in our phones, in our glasses, and now in our drones. And as technology becomes more commonplace, privacy becomes harder and harder to maintain. The same is true with drones. Imagine trying to hide from a small, white object hiding in the clouds. In addition, it is remotely controlled and you don’t know where the “pilot” is. The brutal truth is that almost nothing can be done by the private sector or any single person or company. There is nothing to stop anyone from spying on others with a drone. Government regulation is the only method of controlling them that has any reasonable chance of working. The government agency in charge of regulating drones is the FAA. The FAA only started putting policies in place recently, but it has put a few key ones, such as Notice 8900.292, which creates regulations on videos posted online involving drones.</p>
 		</section>
 		
 		<section>
-			<h2>Security</h2>
+			<h2><span>Security</span></h2>
+			<p>There are a lot of security issues that come with having drones. By far the most crucial part of security is safety. With more and more drones flying in the sky, more and more are finding their way into congested airspace and potentially causing problems. The total number of unsafe UAS operations in 2015 was 1,133, compared to 238 in 2014, which is an increase of 476% (Morris and Thurston). Given the fact that drones are being purchased at an increasing rate, these numbers are only going to increase in the future, assuming the policies of the FAA don’t change. These reports include UAS’s in congested airspace, near passenger aircraft or airports, and interference with emergency response efforts such as wildfires.</p>
+			
+			<p>The FAA has specifically mentioned several events directly involving UAS’s that resulted in the harm of people, property, or wildlife. One example that could have been a lot worse was one that involved a California wildfire. The FAA permitted temporary access to the airspace by aircraft to help fight the fire, and several UAS’s were deployed. All other aircraft were grounded and all firefighting forces were to help contain the wildfire. There were 2 cases of evasive action taken to avoid midair collisions and responding aircraft were forced to land for 2.5 hours while the situation was resolved. There are a couple other incidents that are worth mentioning. On October 26, 2015 a single UAS flew into primary power conductors which knocked out a single span of power line in West Hollywood, California. The estimated initial impact from the power outage was 640 people. If the same incident were to occur again in a more populated area, it could have far more serious impacts. There was yet another accident involving UAS’s that had a much more obvious effect. On September 12, 2015 debris from a UAS struck an 11-month-old baby in the head during an outdoor movie in Pasadena, California. She received treatment at Huntington Memorial Hospital and was shortly released without complications. While an incident such as this wasn’t very severe, it had the potential to be far worse, and only goes to show that incidents such as these are not fiction and can, in fact, occur.</p>
 		</section>
 		
 		
