NEW: Additional Uses of Drones

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -29,7 +29,7 @@
 				<p>It'll be worth it. We promise.</p>
 				<p><progress id="status2" max="540" value="0"></progress></p>
 				
-				<p id="slowConnect" style="display:none;">Slow connection? Try the compressed version <a href="orig.html">here</a>. Warning: may be werid and buggy.</p>
+				<p id="slowConnect" style="display:none;">Slow connection? Try the compressed version <a href="orig.html">here</a>.<br />Warning: may be weird and buggy.</p>
 			</div>
 			
 		</div>
@@ -50,6 +50,7 @@
 		</div>
 		<div id="Card2" class="Card" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
 			<h2>Blades</h2>
+			<p>Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
 		</div>
 		<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2>Power</h2>
