--- a/Use/index.html
+++ b/Use/index.html
@@ -77,7 +77,7 @@
 				</div>
 				
 				<div class="Text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend est tellus. Suspendisse cursus pharetra metus. Praesent luctus, ipsum id gravida cursus, dolor magna consectetur lacus, a tristique dui leo et massa. Integer lobortis id nunc ultricies dictum. Phasellus egestas mi in dui ultrices, aliquet vestibulum ipsum interdum. Sed ac enim auctor, semper magna et, commodo magna. Quisque a laoreet turpis. Vivamus vestibulum velit diam, quis interdum eros cursus quis. Maecenas feugiat ante et justo interdum porta. Ut nec sollicitudin elit. In ut augue scelerisque, dapibus nisi et, imperdiet diam. Fusce quis enim non magna aliquet mollis vitae sed enim. Quisque dignissim libero ante, vitae vulputate tortor tincidunt et. Ut quis consequat urna, interdum vehicula mi. Duis non sem ut dui sodales iaculis. Vivamus aliquam ornare nisi, sit amet efficitur ex sagittis ut. Nam dolor est, tempor nec mollis id, finibus et tortor.</p>
+					<p>Whether it’s manufacturing goods in a factory or brewing a drink in a coffee shop, you don’t want defective materials. Similarly, no one wants there to be pests and other parasites on crops that we will eventually eat. As a result, crop dusting has become very important to the public in order to make sure that our food is fresh and free of diseases. It has always cost a lot to dust crops, from renting some form of aircraft to actually decontaminating the crops. Drones, however, make both steps easier. Instead of having to transport a bulky drone from person to person based on who has rented it most recently, farmers can have a single, multi-purpose drone that helps with crop dusting and can be reused. It saves them energy and time, both of which result in profit, so it pays off in the long run.</p>
 				</div>
 			</div>
 			
@@ -103,7 +103,7 @@
 				</div>
 				
 				<div class="Text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend est tellus. Suspendisse cursus pharetra metus. Praesent luctus, ipsum id gravida cursus, dolor magna consectetur lacus, a tristique dui leo et massa. Integer lobortis id nunc ultricies dictum. Phasellus egestas mi in dui ultrices, aliquet vestibulum ipsum interdum. Sed ac enim auctor, semper magna et, commodo magna. Quisque a laoreet turpis. Vivamus vestibulum velit diam, quis interdum eros cursus quis. Maecenas feugiat ante et justo interdum porta. Ut nec sollicitudin elit. In ut augue scelerisque, dapibus nisi et, imperdiet diam. Fusce quis enim non magna aliquet mollis vitae sed enim. Quisque dignissim libero ante, vitae vulputate tortor tincidunt et. Ut quis consequat urna, interdum vehicula mi. Duis non sem ut dui sodales iaculis. Vivamus aliquam ornare nisi, sit amet efficitur ex sagittis ut. Nam dolor est, tempor nec mollis id, finibus et tortor.</p>
+					<p>Videos are popular. One wouldn’t think that needs to be said, but it’s important. There are dozens of software for creating videos, editing videos, and playing them. However, even though drones are just starting to take off, they’re already taking videos to new heights – literally. Imagine trying to take a video of a sports game – it can be really hard to get a good angle because you can only be on the sidelines. Drones let you take the video camera into the sky very cheaply. You can suddenly get the best shots of every moment, no matter where you are in the crowd. Drones are improving videos beyond what they ever were before.</p>
 				</div>
 			</div>
 			
