--- a/Tech/orig.html
+++ b/Tech/orig.html
@@ -75,6 +75,7 @@
 		</div>
 		<div id="Card2" class="Card" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
 			<h2>Blades</h2>
+			<p>Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
 		</div>
 		<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2>Power</h2>
