NEW: Main Page Splash

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="drones.css" />
+		
+		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
 	</head>
 	<body>
 		<nav>
@@ -16,7 +18,38 @@
 			</ul>
 		</nav>
 		
-		<h1>Drones 101</h1>
-		<div style="height:300vh;width:100%;"></div>
+		<div class="BGCover" id="Drone"></div>
+		
+		<h1 data-0="opacity:1;left:0%;" data-500="opacity:0;left:-50%;">Drones 101</h1>
+		<div data-0="left:0%;top:0%;transform:scale(1);" data-250="left:-50%;top:50%;transform:scale(2);opacity:1;" data-500="left:-100%;opacity:0;transform:scale(3);top:66%;" class="BGCover" id="BG1"></div>
+		
+		
+		
+		
+		
+		
+		
+		<div style="height:calc(3500px + 100vh);width:100%;"></div>
+		
+		<!--<div id="Card1" class="Card" data-0="opacity:1;" data-500="opacity:0;">
+			<h1>Drone Technology</h1>
+		</div>-->
+		
+		<!--
+			Start Page
+			0 - 500
+				500 - 1000 - Uses
+			1000 - 1500
+				1500 - 2000 - Technology
+			2000 - 2500
+				2500 - 3000 - Concerns
+			3000 - 3500
+			End Page
+		-->
+		
+		<script>
+			/*global skrollr*/
+			var s = skrollr.init();
+		</script>
 	</body>
 </html>
