NEW: Main Page Text Placeholders

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -54,15 +54,19 @@
 		</div>
 		<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2>Power</h2>
+			<p>Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on its placement on the drone frame to equally distribute its weight.</p>
 		</div>
 		<div id="Card4" class="Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
 			<h2>Communications</h2>
+			<p>Drones are able to communicate and transfer many types of signals. Drones use communication devices to talk to satellites to define their locations. Signals can also be boosted using drones. Google has plans to use drones to provide internet to millions of people who wouldn’t otherwise be able to access internet because of their remote homes.</p>
 		</div>
 		<div id="Card5" class="Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
 			<h2>Landing Mechanism</h2>
+			<p>This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a Shock absorber when the drone lands or takes off.It is much like the Suspension system in your car.</p>
 		</div>
 		<div id="Card6" class="Card" data-8100="opacity:0;" data-8400="opacity:1;">
 			<h2>Onboard Computer</h2>
+			<p>This acts as the central hub for all info going through the drone. This handles what the motors do so that the drone is able to fly and react to its environment. This also handles what the communications system does. In more ways than one, it is the brain of the drone.</p>
 		</div>
 		
 		<div id="set-height"></div>
