--- a/index.html
+++ b/index.html
@@ -20,10 +20,27 @@
 		
 		<div class="BGCover" id="Drone"></div>
 		
+		<!--Splash-->
 		<h1 data-0="opacity:1;left:0%;" data-500="opacity:0;left:-50%;">Drones 101</h1>
-		<div data-0="left:0%;top:0%;transform:scale(1);" data-250="left:-50%;top:50%;transform:scale(2);opacity:1;" data-500="left:-100%;opacity:0;transform:scale(3);top:66%;" class="BGCover" id="BG1"></div>
+		<div data-0="left:0%;top:0%;transform:scale(1);" data-250="left:-30%;top:13%;transform:scale(1.25);opacity:1;" data-500="left:-60%;opacity:0;transform:scale(1.5);top:25%;" class="BGCover" id="BG1"></div>
 		
+		<!--Uses-->
+		<h2 id="Head2" data-250="opacity:0;transform:translateX(30%);" data-500="opacity:1;transform:translateX(0%);" data-1000="opacity:1;transform:translateX(-5%);" data-1500="opacity:0;transform:translateX(-60%);">Uses of Drones</h2>
+		<p id="Text2" data-250="opacity:0;transform:translateX(40%);" data-500="opacity:1;transform:translateX(0%);" data-1000="opacity:1;transform:translateX(-10%);" data-1500="opacity:0;transform:translateX(-80%);">This is placeholder text.</p>
+		<div class="BGCover" id="Pic2"></div>
 		
+		<!--Tech-->
+		<h2 id="Head3"	data-1000="opacity:0;transform:translateY(30%)translateX(10%);"	data-1500="opacity:1;transform:translateY(0%)translateX(0%);"	data-2000="opacity:1;transform:translateY(-10%)translateX(0%);"	data-2500="opacity:0;transform:translateY(-10%)translateX(-60%);">Technology in Drones</h2>
+		<p id="Text3"	data-1000="opacity:0;transform:translateX(35%);"	data-1500="opacity:1;transform:translateX(0%);"	data-2000="opacity:1;transform:translateX(-10%);"	data-2500="opacity:0;transform:translateX(-150%);">This is more placeholder text.</p>
+		
+		<!--Concerns-->
+		<h2 id="Head4"	data-2000="opacity:0;transform:scale(0)translateX(10%);"	data-2500="opacity:1;transform:scale(1)translateX(2%);"	data-3000="opacity:1;transform:scale(1)translateX(-2%);"	data-3500="opacity:0;transform:scale(2)translateX(-10%);">Concerns with Drones</h2>
+		<p id="Text4"	data-2000="opacity:0;transform:translateX(-30%);"	data-2500="opacity:1;transform:translateX(0%);"	data-3000="opacity:1;transform:translateX(5%);"	data-3500="opacity:0;transform:translateX(30%);">Yet more placeholder text.</p>
+		<div id="Pic4"></div><!--Incoming plane-->
+		
+		<!--End-->
+		<h2 id="Head5">The End</h2>
+		<p id="Text5"></p><!--Link to AKTSA among other things-->
 		
 		
 		
