NEW: Main Page Almost Finish

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2>Power</h2>
-			<p>Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on its placement on the drone frame to equally distribute its weight.</p>
+			<p>Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on the drone frame to equally distribute its weight.</p>
 		</div>
 		<div id="Card4" class="Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
 			<h2>Communications</h2>
@@ -62,7 +62,7 @@
 		</div>
 		<div id="Card5" class="Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
 			<h2>Landing Mechanism</h2>
-			<p>This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a Shock absorber when the drone lands or takes off.It is much like the Suspension system in your car.</p>
+			<p>This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a shock absorber when the drone lands or takes off. It is much like the suspension system in your car.</p>
 		</div>
 		<div id="Card6" class="Card" data-8100="opacity:0;" data-8400="opacity:1;">
 			<h2>Onboard Computer</h2>
@@ -71,25 +71,12 @@
 		
 		<div id="set-height"></div>
 		<p id="time"></p>
-		<!--<video id="v0" tabindex="0" autobuffer="autobuffer" preload="preload">
-			<source type="video/mp4" src="/img/test.mp4">
-			</source>
-			<p>Sorry, your browser does not support the &lt;video&gt; element.</p>
-		</video>-->
 		<img src="/img/dronevideopics/test000.png" id="v1" alt="A video of a drone" />
 		
 		<script>
 			// select video element
 			var vid = document.getElementById('v1');
 			//var vid = $('#v0')[0]; // jquery option
-			
-			// pause video on load
-			/*vid.pause();
-			
-			// pause video on document scroll (stops autoplay once scroll started)
-			window.onscroll = function(){
-				vid.pause();
-			};*/
 			
 			// refresh video frames on interval for smoother playback
 			setInterval(function(){
