--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</ul>
 		</nav>
 		
-		<div class="BGCover" id="Drone"></div>
+		<div class="BGCover" id="Drone" data-0="bottom:12vh;left:40vw;" data-500="bottom:50vh;left:40vw;" data-1000="left:41vw;height:10vw;width:20vw;transform:rotateY(180deg)rotateZ(0deg)translateX(0%)translateY(0%);" data-1500="height:60vw;width:120vw;transform:rotateY(180deg)rotateZ(30deg)translateX(80%)translateY(0%);" data-2000="height:65vw;width:130vw;transform:rotateY(180deg)rotateZ(30deg)translateX(80%)translateY(0%);" data-2500="height:10vw;width:20vw;transform:rotateY(180deg)rotateZ(0deg)translateX(-60%)translateY(0%);" data-3000="transform:rotateY(180deg)rotateZ(0deg)translateX(-70%)translateY(0%);height:10vw;width:20vw;" data-3500="transform:rotateY(180deg)rotateZ(0deg)translateX(50%)translateY(400%);height:5vw;width:10vw;"></div>
 		
 		<!--Splash-->
 		<h1 data-0="opacity:1;left:0%;" data-500="opacity:0;left:-50%;">Drones 101</h1>
@@ -26,21 +26,31 @@
 		
 		<!--Uses-->
 		<h2 id="Head2" data-250="opacity:0;transform:translateX(30%);" data-500="opacity:1;transform:translateX(0%);" data-1000="opacity:1;transform:translateX(-5%);" data-1500="opacity:0;transform:translateX(-60%);">Uses of Drones</h2>
-		<p id="Text2" data-250="opacity:0;transform:translateX(40%);" data-500="opacity:1;transform:translateX(0%);" data-1000="opacity:1;transform:translateX(-10%);" data-1500="opacity:0;transform:translateX(-80%);">This is placeholder text.</p>
-		<div class="BGCover" id="Pic2"></div>
+		<p id="Text2" data-250="opacity:0;transform:translateX(40%);" data-500="opacity:1;transform:translateX(0%);" data-1000="opacity:1;transform:translateX(-10%);" data-1500="opacity:0;transform:translateX(-80%);">
+			Drones are very versatile. They started out for a few, select tasks, but now their functionality and capabilities are increasing quickly. They can be used for just about anything, from saving lives to delivering packages to just having fun. The possibilities are endless!<br /><a href="/Use">Learn More</a>
+		</p>
+		<div class="BGCover" id="Pic2" data-0="opacity:0;bottom:calc(30vh - 5vw);" data-500="opacity:1;bottom:calc(50vh - 5vw);left:46.3vw;" data-1000="left:47.3vw;opacity:1;" data-1500="left:50vw;opacity:0;"></div>
 		
 		<!--Tech-->
 		<h2 id="Head3"	data-1000="opacity:0;transform:translateY(30%)translateX(10%);"	data-1500="opacity:1;transform:translateY(0%)translateX(0%);"	data-2000="opacity:1;transform:translateY(-10%)translateX(0%);"	data-2500="opacity:0;transform:translateY(-10%)translateX(-60%);">Technology in Drones</h2>
-		<p id="Text3"	data-1000="opacity:0;transform:translateX(35%);"	data-1500="opacity:1;transform:translateX(0%);"	data-2000="opacity:1;transform:translateX(-10%);"	data-2500="opacity:0;transform:translateX(-150%);">This is more placeholder text.</p>
+		<p id="Text3"	data-1000="opacity:0;transform:translateX(35%);"	data-1500="opacity:1;transform:translateX(0%);"	data-2000="opacity:1;transform:translateX(-10%);"	data-2500="opacity:0;transform:translateX(-150%);">
+			If you think about it, all drones are super high-tech. It takes a lot of advanced technology to be able to fit a computer, camera, receiver, and more into a small plastic container. 10 years ago, we could have produced few of those parts at the size we need them today, and those that we could weren't cheap.<br /><a href="/Tech">Learn More</a>
+		</p>
 		
 		<!--Concerns-->
 		<h2 id="Head4"	data-2000="opacity:0;transform:scale(0)translateX(10%);"	data-2500="opacity:1;transform:scale(1)translateX(2%);"	data-3000="opacity:1;transform:scale(1)translateX(-2%);"	data-3500="opacity:0;transform:scale(2)translateX(-10%);">Concerns with Drones</h2>
-		<p id="Text4"	data-2000="opacity:0;transform:translateX(-30%);"	data-2500="opacity:1;transform:translateX(0%);"	data-3000="opacity:1;transform:translateX(5%);"	data-3500="opacity:0;transform:translateX(30%);">Yet more placeholder text.</p>
-		<div id="Pic4"></div><!--Incoming plane-->
+		<p id="Text4"	data-2000="opacity:0;transform:translateX(-30%);"	data-2500="opacity:1;transform:translateX(0%);"	data-3000="opacity:1;transform:translateX(5%);"	data-3500="opacity:0;transform:translateX(30%);">
+			When you think about having a small object capable of being remotely controlled and of using a camera, you realize just how concerning the use of a drone can be. The potential issues of drones range from the invasion of privacy to security issues to being plain annoying. Howeve simple each may sound, there are lots of effects and solutions of varying success of each; for example, there are several laws in place regarding passenger planes and their hopefully nonexistent interactions with drones.<br /><a href="/Prob">Learn More</a>
+		</p>
+		<div id="Pic4" data-2000="opacity:0;transform:rotateY(180deg)translateX(-40%)translateY(0%);" data-2500="opacity:1;transform:rotateY(180deg)translateX(-10%)translateY(0%);" data-3000="opacity:1;transform:rotateY(180deg)translateX(0%)translateY(0%);" data-3200="opacity:0;transform:rotateY(180deg)translateX(40%)translateY(-20%);"></div><!--Incoming plane-->
 		
 		<!--End-->
-		<h2 id="Head5">The End</h2>
-		<p id="Text5"></p><!--Link to AKTSA among other things-->
+		<div id="BG5" class="BGCover" data-3000="opacity:0;transform:translateX(10%);" data-3500="opacity:1;transform:translateX(0%);"></div>
+		<div id="Sec5" data-3300="opacity:0;transform:translateY(-10%);" data-3500="opacity:1;transform:translateY(0%);">
+			<h2 id="Head5">The End</h2>
+			<p id="Text5"></p><!--Link to AKTSA among other things-->
+		</div>
+		
 		
 		
 		
