HOPEFULLY REGIONALS FINAL

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -29,7 +29,7 @@
 				<p>It'll be worth it. We promise.</p>
 				<p><progress id="status2" max="540" value="0"></progress></p>
 				
-				<p id="slowConnect" style="display:none;">Slow connection? Try the compressed version <a href="orig.html">here</a>.<br />Warning: may be weird and buggy.</p>
+				<p id="slowConnect" style="position:relative;display:none;z-index:999999;">Slow connection? Try the compressed version <a href="orig.html">here</a>.<br />Warning: may be weird and buggy.</p>
 			</div>
 			
 		</div>
