--- a/Use/index.html
+++ b/Use/index.html
@@ -167,7 +167,7 @@
 				</div>
 				
 				<div class="Text">
-					<p>“Drone” didn’t always have the same connotation or denotation that it does today. The drones of 10 or 15 years ago were remote controlled airplanes, and they gradually evolved into what they are today. Granted, there have been those geniuses who put these toys to good use, but their fundamental purpose is and will be for entertainment. The drones that best fit these descriptions are generally those that don’t fall into the other categories. People can have fun with drones in different ways. You can enjoy flying them, you can enjoy a collection of drones reminiscent of your collection(s) of Pokémon, and you can even destroy them with a crowbar in Half-Life 2. Also like Pokémon, there are endless varieties that will continue to be developed as long as people have fun with them.</p>
+					<p>“Drone” didn’t always have the same connotation or denotation that it does today. The drones of 10 or 15 years ago were remote controlled airplanes, and they gradually evolved into what they are today. Granted, there have been those geniuses who put these toys to good use, but their fundamental purpose is and will be for entertainment. The drones that best fit these descriptions are generally those that don’t fall into the other categories. People can have fun with drones in different ways. You can enjoy flying them, collecting them, and modding them.</p>
 				</div>
 			</div>
 		</section>
