--- a/Prob/index.html
+++ b/Prob/index.html
@@ -5,6 +5,9 @@
 		
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="prob.css" />
+		
+		<script src="/img/smooth-scroll.js"></script>
+		<script src="/img/waypoints.js"></script>
 	</head>
 	<body>
 		<nav>
@@ -16,23 +19,28 @@
 			</ul>
 		</nav>
 		
-		<h1>Concerns</h1>
+		<div id="DownButton" onclick="MoveDown();">&#9660;</div>
 		
 		<section>
+			<h1>Concerns</h1>
+		</section>
+		
+		
+		<section id="Sec1">
 			<div>
 				<h2><span>Annoyances</span></h2>
 				<p>Stop and listen closely. Do you hear that? That’s the sound of your computer fan, possibly refrigerator, traffic, people outside, music playing from down the hall, and a dog barking outside. Noise pollution is unwanted or harmful levels of noise (EPA). Noise pollution comes primarily from traffic and airports (Nunez). However, as drones become more and more prevalent in today’s society, they are contributing more and more to noise pollution. It’s aesthetically detrimental as well as being physically and psychologically harmful. Some direct results of noise pollution are elevated blood pressure, heart disease, and psychological trauma, and has been associated with hypertension, reading impairment, and anxiety (Nunez). Noise pollution is becoming such a problem that Title IV of the Clean Air Act is devoted to noise pollution, such as studying its effects and investigating serious problems that arise from noise pollution. While many think that this is a serious overreaction to a few flying machines, it should also be noted that the FAA projected over 1 million drones would be purchased during the 2015 holiday season (Murphy).</p>
 			</div>
 		</section>
 		
-		<section>
+		<section id="Sec2">
 			<div>
 			<h2><span>Privacy</span></h2>
 			<p>Technology today is found almost everywhere. There are cameras in our phones, in our glasses, and now in our drones. And as technology becomes more commonplace, privacy becomes harder and harder to maintain. The same is true with drones. Imagine trying to hide from a small, white object hiding in the clouds. In addition, it is remotely controlled and you don’t know where the “pilot” is. The brutal truth is that almost nothing can be done by the private sector or any single person or company. There is nothing to stop anyone from spying on others with a drone. Government regulation is the only method of controlling them that has any reasonable chance of working. The government agency in charge of regulating drones is the FAA. The FAA only started putting policies in place recently, but it has put a few key ones, such as Notice 8900.292, which creates regulations on videos posted online involving drones.</p>
 			</div>
 		</section>
 		
-		<section>
+		<section id="Sec3">
 			<div>
 			<h2><span>Security</span></h2>
 			<p>There are a lot of security issues that come with having drones. By far the most crucial part of security is safety. With more and more drones flying in the sky, more and more are finding their way into congested airspace and potentially causing problems. The total number of unsafe UAS operations in 2015 was 1,133, compared to 238 in 2014, which is an increase of 476% (Morris and Thurston). Given the fact that drones are being purchased at an increasing rate, these numbers are only going to increase in the future, assuming the policies of the FAA don’t change. These reports include UAS’s in congested airspace, near passenger aircraft or airports, and interference with emergency response efforts such as wildfires.</p>
@@ -41,6 +49,51 @@
 				</div>
 		</section>
 		
+		<script>
+			var currLoc = 0;
+		
+			smoothScroll.init(); 
+			function MoveDown(){
+				if(currLoc != 3){
+					smoothScroll.animateScroll(null, '#Sec' + (currLoc + 1));
+				}
+				
+			}
+			
+			//--------------------
+			//NAVIGATION WAYPOINTS
+			//--------------------
+			var waypointnav1 = new Waypoint({
+				element: document.getElementById('Sec1'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 1;
+					} else{
+						currLoc = 0;
+					}
+				}
+			});
+			var waypointnav2 = new Waypoint({
+				element: document.getElementById('Sec2'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 2;
+					} else{
+						currLoc = 1;
+					}
+				}
+			});
+			var waypointnav3 = new Waypoint({
+				element: document.getElementById('Sec3'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 3;
+					} else{
+						currLoc = 2;
+					}
+				}
+			});
+		</script>
 		
 	</body>
 </html>
