FIX: Main Plane Alignment Resize

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<p id="Text4"	data-2000="opacity:0;transform:translateX(-30%);"	data-2500="opacity:1;transform:translateX(0%);"	data-3000="opacity:1;transform:translateX(5%);"	data-3500="opacity:0;transform:translateX(30%);">
 			When you think about having a small object capable of being remotely controlled and of using a camera, you realize just how concerning the use of a drone can be. The potential issues of drones range from the invasion of privacy to security issues to being plain annoying. Howeve simple each may sound, there are lots of effects and solutions of varying success of each; for example, there are several laws in place regarding passenger planes and their hopefully nonexistent interactions with drones.<br /><br /><a href="/Prob">Learn More</a>
 		</p>
-		<div id="Pic4" data-2000="opacity:0;transform:rotateY(180deg)translateX(-40%)translateY(0%);" data-2500="opacity:1;transform:rotateY(180deg)translateX(-10%)translateY(0%);" data-3000="opacity:1;transform:rotateY(180deg)translateX(0%)translateY(0%);" data-3200="opacity:0;transform:rotateY(180deg)translateX(40%)translateY(-20%);"></div><!--Incoming plane-->
+		<div id="Pic4" data-2000="opacity:0;transform:rotateY(180deg)translateX(-40%)translateY(40vh);" data-2500="opacity:1;transform:rotateY(180deg)translateX(-10%)translateY(40vh);" data-3000="opacity:1;transform:rotateY(180deg)translateX(0%)translateY(40vh);" data-3200="opacity:0;transform:rotateY(180deg)translateX(40%)translateY(0vh);"></div><!--Incoming plane-->
 		
 		<!--End-->
 		<div id="BG5" class="BGCover" data-3000="opacity:0;transform:translateX(10%);" data-3500="opacity:1;transform:translateX(0%);"></div>
