--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="Sec5" data-3299="right:-100vw;" data-3300="right:10%;opacity:0;transform:translateY(-10%);" data-3500="opacity:1;transform:translateY(0%);">
 			<div>
 				<h2 id="Head5">The End</h2>
-				<p id="Text5">An <a href="http://aktsa.github.io/">AK TSA</a> creation.<br />Visit our chapter site!</p><!--Link to AKTSA among other things-->
+				<p id="Text5">An <a href="http://aktsa.org/">AK TSA</a> creation.<br />Visit our chapter site!</p><!--Link to AKTSA among other things-->
 			</div>
 		</div>
 		
