--- a/Use/index.html
+++ b/Use/index.html
@@ -5,6 +5,8 @@
 		
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="use.css" />
+		
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<nav>
