--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="drones.css" />
 		
+		
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
 	</head>
 	<body>
