--- a/Hist/index.html
+++ b/Hist/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="hist.css" />
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.js"></script>
+		
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<nav>
