TEST: Load Console Log

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -198,6 +198,7 @@
 											   vid.duration) * 100));
 				//document.getElementById("loadingStatus").innerHTML =   percentLoaded + '%';
 				document.getElementById("status2").value = percentLoaded;
+				console.log("Loaded video " + percentLoaded + "%");
 			}
 			
 			function playVideo() {
