--- a/Tech/index.html
+++ b/Tech/index.html
@@ -23,7 +23,7 @@
 			//]]>
 		</script>-->
 	</head>
-	<body style="overflow:visible;">
+	<body>
 		<!-- Preloader -->
 		<div id="preloader">
 			<div id="status">
@@ -203,6 +203,7 @@
 			
 			function playVideo() {
 				document.getElementById("preloader").style.display = "none";
+				document.getElementsByTagName("BODY")[0].style.overflow = "visible";
 			}
 			
 			
