--- a/Tech/index.html
+++ b/Tech/index.html
@@ -199,7 +199,7 @@
 				//document.getElementById("loadingStatus").innerHTML =   percentLoaded + '%';
 				document.getElementById("status2").value = percentLoaded;
 				console.log("Loaded video " + percentLoaded + "%");
-				if(percentLoaded == 100){
+				if(percentLoaded >= 40){
 					playVideo();
 				}
 			}
